# OCamlCppExn

./: .gitignore  Makefile  Readme.md  dune  oce_runner.ml
cpp/: dune  exn_thrower.cpp  exn_thrower.h
cpp/config/: discover.ml
