(library
  (name exn_thrower)
  (cxx_names exn_thrower)
  (cxx_flags -std=c++11 -fPIC)
  ;;; -lstdc++ is not portable, it can be e.g. -lc++
  (c_library_flags -lstdc++)
  (library_flags (:include library_flags.sexp))
)

;; fetch library flags from config/discover (since it is OS specific)
(rule
 (targets library_flags.sexp)
 (deps    (:discover config/discover.exe))
 (action  (run %{discover})))
